include_directories(.)

add_executable(01.cpp 01.cpp)
add_executable(02.cpp 02.cpp)
add_executable(03.cpp 03.cpp)
add_executable(04.cpp 04.cpp)
add_executable(05.cpp 05.cpp)
add_executable(06.cpp 06.cpp)
add_executable(07.cpp 07.cpp)
add_executable(08.cpp 08.cpp)
add_executable(09.cpp 09.cpp)
add_executable(10.cpp 10.cpp)
add_executable(11.cpp 11.cpp)
add_executable(12.cpp 12.cpp)
add_executable(13.cpp 13.cpp)
add_executable(14.cpp 14.cpp)
add_executable(15.cpp 15.cpp)
add_executable(16.cpp 16.cpp)
add_executable(17.cpp 17.cpp)
add_executable(18.cpp 18.cpp)
add_executable(19.cpp 19.cpp)
add_executable(20.cpp 20.cpp)
add_executable(21.cpp 21.cpp)
add_executable(22.cpp 22.cpp)
add_executable(23.cpp 23.cpp)
add_executable(24.cpp 24.cpp)
add_executable(25.cpp 25.cpp)
add_executable(26.cpp 26.cpp)
add_executable(27.cpp 27.cpp)
add_executable(28.cpp 28.cpp)
add_executable(29.cpp 29.cpp)
add_executable(30.cpp 30.cpp)
add_executable(31.cpp 31.cpp)
add_executable(32.cpp 32.cpp)
add_executable(33.cpp 33.cpp)
add_executable(34.cpp 34.cpp)
add_executable(35.cpp 35.cpp)
add_executable(36.cpp 36.cpp)
add_executable(37.cpp 37.cpp)
add_executable(38.cpp 38.cpp)
add_executable(39.cpp 39.cpp)
add_executable(40.cpp 40.cpp)
add_executable(41.cpp 41.cpp)
add_executable(42.cpp 42.cpp)
add_executable(43.cpp 43.cpp)
add_executable(44.cpp 44.cpp)
add_executable(45.cpp 45.cpp)
add_executable(46.cpp 46.cpp)
