include_directories(.)

add_executable(1_01.cpp 1_01.cpp)
add_executable(1_02.cpp 1_02.cpp)
add_executable(1_03.cpp 1_03.cpp)
add_executable(1_04.cpp 1_04.cpp)
add_executable(1_05.cpp 1_05.cpp)
add_executable(1_06.cpp 1_06.cpp)
add_executable(1_07.cpp 1_07.cpp)
add_executable(1_08.cpp 1_08.cpp)
add_executable(1_09.cpp 1_09.cpp)
add_executable(1_10.cpp 1_10.cpp)
add_executable(1_11.cpp 1_11.cpp)
add_executable(1_12.cpp 1_12.cpp)
add_executable(1_13.cpp 1_13.cpp)
add_executable(1_14.cpp 1_14.cpp)
add_executable(1_15.cpp 1_15.cpp)
add_executable(1_16.cpp 1_16.cpp)
add_executable(1_17.cpp 1_17.cpp)
add_executable(1_18.cpp 1_18.cpp)
add_executable(1_19.cpp 1_19.cpp)
add_executable(1_20.cpp 1_20.cpp)
add_executable(1_21.cpp 1_21.cpp)
add_executable(1_22.cpp 1_22.cpp)
add_executable(1_23.cpp 1_23.cpp)
add_executable(1_24.cpp 1_24.cpp)
add_executable(1_25.cpp 1_25.cpp)
add_executable(1_26.cpp 1_26.cpp)
add_executable(1_27.cpp 1_27.cpp)
add_executable(1_28.cpp 1_28.cpp)
add_executable(1_29.cpp 1_29.cpp)
add_executable(1_30.cpp 1_30.cpp)
add_executable(1_31.cpp 1_31.cpp)
add_executable(1_32.cpp 1_32.cpp)
add_executable(1_33.cpp 1_33.cpp)
add_executable(1_34.cpp 1_34.cpp)
add_executable(1_35.cpp 1_35.cpp)
add_executable(1_36.cpp 1_36.cpp)
add_executable(1_37.cpp 1_37.cpp)
add_executable(1_38.cpp 1_38.cpp)
add_executable(1_39.cpp 1_39.cpp)
add_executable(1_40.cpp 1_40.cpp)
add_executable(1_41.cpp 1_41.cpp)
add_executable(1_42.cpp 1_42.cpp)
add_executable(1_43.cpp 1_43.cpp)
add_executable(1_44.cpp 1_44.cpp)
add_executable(1_45.cpp 1_45.cpp)
add_executable(1_46.cpp 1_46.cpp)
